--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,14 @@
     <string name="a5">资料</string>
     <string name="a6">账单</string>
     <string name="a7">日志</string>
+    <string name="welcomes">Welcome</string>
+    <string name="search">搜索蓝牙</string>
+    <!-- xxxactivity.java -->
+    <string name="toast_success">连接成功</string>
+    <string name="toast_fail">连接失败</string>
+    <string name="toast_notconnect">请先连接打印机</string>
     <string name="loading">加载中......</string>
-
+    <string name="Networkexception">网络未连接</string>
+    <string name="Abnormalserver">服务器异常</string>
+    <string name="notmore">暂无更多</string>
 </resources>
